# recommendations

./: embedding_module_gen.py  main_training.py  pyproject.toml  requirements.txt
commons/: feature_utils.py  functional.py  layers.py  utils.py
commons/configs/: data_loader_config.py  feature_config.py  model_config.py  tracker_config.py  trainer_config.py  trainer_pipeline_config.py  training_strategy_config.py
commons/data/: __init__.py  data_loader_strategy.py  data_store.py  dataset_generator_utils.py  simple_dataset_generator.py  torch_data_loader.py
commons/hydra/: hydra_plugins.py
commons/hydra/training/data_loader/: simple.yaml
commons/hydra/training/dataset/: default.yaml
commons/hydra/training/eval/: default.yaml
commons/hydra/training/export/: default.yaml
commons/hydra/training/inference/: default.yaml
commons/hydra/training/train/: default.yaml
commons/pipeline/: base_model_wrapper.py  model_builder.py  model_checkpointer.py  trainer_pipeline.py  types.py
commons/trackers/: __init__.py  base.py  mlflow_tracker.py
commons/training_strategy/: __init__.py  accelerate_training_strategy.py  train_loop_per_worker_build.py  training_strategy.py
commons/transformers/: configs.py  layers.py
hydra-configs/: lthm_train.yaml  ranker_config.yaml
hydra-configs/model/: lthm.yaml
hydra-configs/trackers/: default.yaml
models/lthm/: builder.py  config.py
models/lthm/sequence/: encoder.py  product_tower.py  query_tower.py  wrapper.py
models/ranker/: config.py
models/ranker/fdlrm/: factorized_dlrm.py
(+2 files in other folders)
