[project]
name = "reco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "accelerate>=1.10.0",
    "hydra-core>=1.3.2",
    "overrides>=7.7.0",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "ray>=2.48.0",
    "torch>=2.8.0",
    "xxhash>=3.5.0",
]
